starting final notes

--- a/docs/planning/2021/sprints/sprint 8/04-20-to-04-30.md
+++ b/docs/planning/2021/sprints/sprint 8/04-20-to-04-30.md
@@ -11,7 +11,7 @@
 
 ## Sprint completion notes
 
-these are done at the end of the sprint
+- Harish was out 4/26, 4/27
 
 ---
 
@@ -76,6 +76,8 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Naveenkumar
   - add a template to Geppetto and use them to generate the tkt app
+  - team up with Bala to solve the side navigation issue once
+  
 
 - Arunodhayam
   - finish typescript
@@ -83,9 +85,11 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Bala
   - learn async/await in node
-  - install geppetto locally - as of Friday 4/23 did not have a machine with 16GB
+  - learn handlebars
+  - install geppetto locally - did not receive 16 GB machine till Monday afternoon IST 4/26
   - add WeConnect to Geppetto including the generator
     - must solve the side navigation problem for all templates (speak with JP or George)
+    - was asked to partner with Naveen to solve the side navigation issue once
 
 
 - Sundarapandeeswar
