first cut sprint 9 plan

--- a/docs/planning/2021/sprints/sprint 8/04-20-to-04-30.md
+++ b/docs/planning/2021/sprints/sprint 8/04-20-to-04-30.md
@@ -12,6 +12,10 @@
 ## Sprint completion notes
 
 - Harish was out 4/26, 4/27
+- Krishna was busy with another project for at least 3-4 days, was out sick one day, and was out fully on another project on Monday May 3
+- Naveen was pulled to another project mid to late week on the second week of the sprint
+- started the work on connectors with first refactoring the microflow array to sit under a microflow step (GpCheck-Connector)
+- Bala did not receive a 16 GB machine till half the sprint was completed
 
 ---
 
