--- a/docs/planning/2021/sprints/sprint 9/05-04-to-05-14.md
+++ b/docs/planning/2021/sprints/sprint 9/05-04-to-05-14.md
@@ -27,11 +27,14 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - JP
   - priority bugs as they arise
-    - Connector framework
+  - Connector framework
+    - start admin screen generation to allow admins of the Generated application to add the creds needed by the external connectors
     - balance work with  Manavalan depending on Krishna's availability
 
   - Manavalan
     - work JP on  Connectors
+    - start admin screen generation to allow admins of the Generated application to add the creds needed by the external connectors
+    - balance work with  Manavalan depending on Krishna's availability
 
   - Krishnakumar
     - work with JP on Connectors/Newman
@@ -39,7 +42,6 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - Harish
     - work with JP to attach CloneManager to front end **this is low priority**
     - CloneManager
-      - complete testing/generation
       - add "share-visibility" field to Project collection - this is what allows a project to be shown in the ![sample app section](./sample-shared-section.png "Geppetto Sample Applications Section")
     - HOP - continue learning Angular
 
