mid sprint updates

--- a/docs/planning/2021/sprints/sprint 9/05-04-to-05-14.md
+++ b/docs/planning/2021/sprints/sprint 9/05-04-to-05-14.md
@@ -11,6 +11,13 @@
 
 ## Sprint completion notes
 
+Krishna was out on another project: May 5th
+Sheik was out: May 3, May 4th
+Sundar worked on D3 with George starting May 4th lasted till?
+Naveen moved to another project
+Arunodhayam was out: May 6, May 7
+Ajith was pulled by Supriya May 7
+
 ---
 
 ## UX Assignments
@@ -26,42 +33,51 @@ Please note to look for specifics tasks in Github this just gives the overall go
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - JP
+
   - priority bugs as they arise
   - Connector framework
+
     - start admin screen generation to allow admins of the Generated application to add the creds needed by the external connectors
-    - balance work with  Manavalan depending on Krishna's availability
+    - balance work with Manavalan depending on Krishna's availability
 
   - Manavalan
-    - work JP on  Connectors
+
+    - work JP on Connectors
     - start admin screen generation to allow admins of the Generated application to add the creds needed by the external connectors
-    - balance work with  Manavalan depending on Krishna's availability
+    - balance work with Manavalan depending on Krishna's availability
 
   - Krishnakumar
+
     - work with JP on Connectors/Newman
 
   - Harish
     - work with JP to attach CloneManager to front end **this is low priority**
     - CloneManager
-      - add "share-visibility" field to Project collection - this is what allows a project to be shown in the ![sample app section](./sample-shared-section.png "Geppetto Sample Applications Section")
+      - add "share-visibility" field to Project collection - this is what allows a project to be shown in the ![sample app section](./sample-shared-section.png 'Geppetto Sample Applications Section')
     - HOP - continue learning Angular
 
 - Naveenkumar
+
   - moved on to another project
 
 - Arunodhayam
+
   - add a "Silent Nature" template including generation as well as navigation
 
 - Bala
+
   - add WeConnect to Geppetto including the generator
     - must solve the side navigation problem for all templates (speak with JP or George)
 
 - Sundarapandeeswar
+
   - continue learning Angular
   - HOP continue to learn GrapesJS
 
 - Surendar
+
   - continue learning Angular
-  - HOP continue to learn  GrapesJS
+  - HOP continue to learn GrapesJS
 
 - Sheik
   - learn node
