mid sprint updates

--- a/docs/planning/2021/sprints/sprint 9/05-04-to-05-14.md
+++ b/docs/planning/2021/sprints/sprint 9/05-04-to-05-14.md
@@ -17,6 +17,7 @@ Sundar worked on D3 with George starting May 4th lasted till?
 Naveen moved to another project
 Arunodhayam was out: May 6, May 7
 Ajith was pulled by Supriya May 7
+JP was out on May 12
 
 ---
 
