close out notes for sprint 9 and start of sprint-10 plan

--- a/docs/planning/2021/sprints/sprint 10/05-18-to-05-28.md
+++ b/docs/planning/2021/sprints/sprint 10/05-18-to-05-28.md
@@ -2,16 +2,79 @@
 
 ## Goal/notes for Sprint
 
+1. start BETA-10
+2. complete connector framework/code generation
+3. Team learning Angular to start to expand their GrapesJs knowledge
+
+---
+
+## Sprint completion notes
+
+---
+
 ## UX Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
+- Arjit
+  - using Geppetto screen designer create a professional Tkt app
+  - continue developing static pages and add more templates until we get to nine (9) total
+
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
+
+- JP
+
+  - priority bugs as they arise
+  - Connector framework
+    - complete the Connector framework with help of Manavalan, Harish and others if needed
+
+- Manavalan
+  - work JP on Connectors
+
+  - Harish
+    - work on Connectors with JP
+    - HOP - continue learning Angular
+
+- Vignesh
+  - works with jp on connectors/newman
+  - continue to learn GrapesJS
+  - HOP - continue to learn Angular
+
+- Arunodhayam
+
+  - finish adding  "Silent Nature" template including generation as well as navigation
+  - help with Connectors as possible
+
+- Bala
+
+  - finish WeConnect to Geppetto including the generator
+  - help with Connectors as possible
+
+- Sundarapandeeswar
+  - speed up learning GrapesJS
+    - CRUD operations (save and update GJS to a DB)
+      - use Angular 12 for sample GrapesJS app
+    - complete the Ajith list
+    - start to review and understand the Geppetto screen designer (GrapesJS) code
+  - HOP continue learning Angular
+    - start using Angular 12 for all sample code
+
+- Surendar
+  - moved to D3 project
+  - HOP continue to learn Angular course
+
+- Sheik
+  - learn node
+  - install Geppetto locally
+    - generate the ticket application
 
 ---
 
 ## DevOps Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
+
+- Arunodhayam
+  - support geppetto deployments
