--- a/docs/planning/2021/sprints/sprint 9/05-04-to-05-14.md
+++ b/docs/planning/2021/sprints/sprint 9/05-04-to-05-14.md
@@ -11,13 +11,17 @@
 
 ## Sprint completion notes
 
-Krishna was out on another project: May 5th
-Sheik was out: May 3, May 4th
-Sundar worked on D3 with George starting May 4th lasted till?
-Naveen moved to another project
-Arunodhayam was out: May 6, May 7
-Ajith was pulled by Supriya May 7
-JP was out on May 12
+1. Krishna was out on another project: May 5th
+2. Sheik was out: May 3, May 4th
+3. Sundar worked on D3 with George starting May 4th start of sprint
+4. Naveen moved to another project
+5. Arunodhayam was out: May 6, May 7
+6. Ajith was pulled by Supriya May 7
+7. JP was out on May 12
+8. Manavalan worked on special project: May 13 and May 14
+9. Cloning was completed
+10. More professional tables are now being generated thanks to Ajit designing better CSS
+11. connectors design and base code finished still need more work
 
 ---
 
@@ -49,7 +53,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
   - Krishnakumar
 
-    - work with JP on Connectors/Newman
+    - assigned to another project
 
   - Harish
     - work with JP to attach CloneManager to front end **this is low priority**
