sprint 10 plan start of notes

--- a/docs/planning/2021/sprints/sprint 10/05-18-to-05-28.md
+++ b/docs/planning/2021/sprints/sprint 10/05-18-to-05-28.md
@@ -10,6 +10,11 @@
 
 ## Sprint completion notes
 
+- Harish was out: May 17
+- Surrender started to work on the Mobi project part time: May 17 (Manavalan to ask him)
+- Arunodhayam on another project: May 17
+- Sheik on another project: May 17
+
 ---
 
 ## UX Assignments
@@ -31,6 +36,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
     - complete the Connector framework with help of Manavalan, Harish and others if needed
 
 - Manavalan
+
   - work JP on Connectors
 
   - Harish
@@ -38,13 +44,14 @@ Please note to look for specifics tasks in Github this just gives the overall go
     - HOP - continue learning Angular
 
 - Vignesh
+
   - works with jp on connectors/newman
   - continue to learn GrapesJS
   - HOP - continue to learn Angular
 
 - Arunodhayam
 
-  - finish adding  "Silent Nature" template including generation as well as navigation
+  - finish adding "Silent Nature" template including generation as well as navigation
   - help with Connectors as possible
 
 - Bala
@@ -53,6 +60,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - help with Connectors as possible
 
 - Sundarapandeeswar
+
   - speed up learning GrapesJS
     - CRUD operations (save and update GJS to a DB)
       - use Angular 12 for sample GrapesJS app
@@ -62,6 +70,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
     - start using Angular 12 for all sample code
 
 - Surendar
+
   - moved to D3 project
   - HOP continue to learn Angular course
 
