regular mid sprint updates

--- a/docs/planning/2021/sprints/sprint 10/05-18-to-05-28.md
+++ b/docs/planning/2021/sprints/sprint 10/05-18-to-05-28.md
@@ -10,10 +10,12 @@
 
 ## Sprint completion notes
 
-- Harish was out: May 17
+- Harish was out: May 17, May 18th, May 24th, 
 - Surrender started to work on the Mobi project part time: May 17 (Manavalan to ask him)
 - Arunodhayam on another project: May 17
 - Sheik on another project: May 17
+- Vignesh was pulled to Pluralsight project on May 18tt the start of the sprint
+- Manavalan was out on: May 18th
 
 ---
 
@@ -37,7 +39,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Manavalan
 
-  - work JP on Connectors
+  - work JP on Connectors - was pulled to work on dev ops for polypm as well as rdp machines for 10d
 
   - Harish
     - work on Connectors with JP
@@ -45,22 +47,26 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Vignesh
 
+  - pulled to another project
   - works with jp on connectors/newman
   - continue to learn GrapesJS
   - HOP - continue to learn Angular
 
 - Arunodhayam
 
+  - pulled to another project
   - finish adding "Silent Nature" template including generation as well as navigation
   - help with Connectors as possible
 
 - Bala
 
+  - pulled to another project late last sprint and then was out getting married
   - finish WeConnect to Geppetto including the generator
   - help with Connectors as possible
 
 - Sundarapandeeswar
 
+  - pulled to another project (Solar Pulse)
   - speed up learning GrapesJS
     - CRUD operations (save and update GJS to a DB)
       - use Angular 12 for sample GrapesJS app
@@ -71,10 +77,10 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Surendar
 
-  - moved to D3 project
   - HOP continue to learn Angular course
 
 - Sheik
+  - pulled to another project
   - learn node
   - install Geppetto locally
     - generate the ticket application
@@ -86,4 +92,5 @@ Please note to look for specifics tasks in Github this just gives the overall go
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Arunodhayam
+  - pulled to another project
   - support geppetto deployments
