updated compleation notes

--- a/docs/planning/2021/sprints/sprint 10/05-18-to-05-28.md
+++ b/docs/planning/2021/sprints/sprint 10/05-18-to-05-28.md
@@ -10,12 +10,13 @@
 
 ## Sprint completion notes
 
-- Harish was out: May 17, May 18th, May 24th, 
-- Surrender started to work on the Mobi project part time: May 17 (Manavalan to ask him)
+- Harish was out: May 17 (Mon), May 18th (Tue), May 24th, May 25th, May 26th
+- Surrender started to work on the Mobi project part time: May 17 
 - Arunodhayam on another project: May 17
 - Sheik on another project: May 17
 - Vignesh was pulled to Pluralsight project on May 18tt the start of the sprint
 - Manavalan was out on: May 18th
+- Bala on another project - to do Db work starting: May 20 and 21st, then we left to get married for two weeks
 
 ---
 
