update on closing notes

--- a/docs/planning/2021/sprints/sprint 10/05-18-to-05-28.md
+++ b/docs/planning/2021/sprints/sprint 10/05-18-to-05-28.md
@@ -10,13 +10,14 @@
 
 ## Sprint completion notes
 
-- Harish was out: May 17 (Mon), May 18th (Tue), May 24th, May 25th, May 26th
-- Surrender started to work on the Mobi project part time: May 17 
+- Harish was out: May 17 (Mon), May 18th (Tue), May 24th, May 25th, May 26th,May 28th
+- Surrender started to work on the Mobi project part time: May 17
 - Arunodhayam on another project: May 17
 - Sheik on another project: May 17
 - Vignesh was pulled to Pluralsight project on May 18tt the start of the sprint
-- Manavalan was out on: May 18th
+- Manavalan was out on: May 18th, he was also pulled to work on the 10d RDP and PolyOm Azure AD, he did come back sporadically on May 27th to Geppetto
 - Bala on another project - to do Db work starting: May 20 and 21st, then we left to get married for two weeks
+- George came back part time for a couple of days, on May 26 and 27th but was back out on May 28th to work on another project
 
 ---
 
