last notes on sprint 10 and start of sprint 11 notes

--- a/docs/planning/2021/sprints/sprint 10/05-18-to-05-28.md
+++ b/docs/planning/2021/sprints/sprint 10/05-18-to-05-28.md
@@ -10,6 +10,11 @@
 
 ## Sprint completion notes
 
+- summary:
+
+  - slow progress on the connectors has been made and we are getting close on completing this feature
+  - with all the people moving out it was tough to make overall progress
+
 - Harish was out: May 17 (Mon), May 18th (Tue), May 24th, May 25th, May 26th,May 28th
 - Surrender started to work on the Mobi project part time: May 17
 - Arunodhayam on another project: May 17
@@ -25,7 +30,7 @@
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
-- Arjit
+- Ajith
   - using Geppetto screen designer create a professional Tkt app
   - continue developing static pages and add more templates until we get to nine (9) total
 
