--- a/docs/planning/2021/sprints/sprint 11/06-01-to-06-11.md
+++ b/docs/planning/2021/sprints/sprint 11/06-01-to-06-11.md
@@ -2,16 +2,62 @@
 
 ## Goal/notes for Sprint
 
+1. start BETA-11
+2. complete connector framework/code generation
+3. start the SEF
+4. Surrender learning Angular to start to expand their GrapesJs knowledge
+5. depending on Connectors add two templates to live
+
+---
+
+## Sprint completion notes
+
+---
+
 ## UX Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
+- Ajith
+  - using Geppetto screen designer create a professional Tkt app
+  - continue developing static pages and add more templates until we get to nine (9) total
+
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
+
+- JP
+
+  - priority bugs as they arise
+  - Connector framework
+    - complete the Connector framework with help of who ever is around
+    - finish adding Bala template
+
+- George
+
+  - finish screen designer css problem
+  - help finish connectors
+  - start SEF
+
+- Manavalan
+
+  - TBD
+
+- Harish
+
+  - work on Connectors with JP
+  - take over the Arunodhayam template
+  - HOP: continue learning Angular
+
+- Surrender
+  - continue to learn GrapesJS
+  - HOP: continue to learn Angular course
 
 ---
 
 ## DevOps Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
+
+- Harish
+  - support geppetto deployments
