start of sprit 11 notes

--- a/docs/planning/2021/sprints/sprint 11/06-01-to-06-11.md
+++ b/docs/planning/2021/sprints/sprint 11/06-01-to-06-11.md
@@ -51,6 +51,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Surrender
   - continue to learn GrapesJS
+  - add HyChartJs to current screen designer first add it to demo project
   - HOP: continue to learn Angular course
 
 ---
