in sprint updates

--- a/docs/planning/2021/sprints/sprint 11/06-01-to-06-11.md
+++ b/docs/planning/2021/sprints/sprint 11/06-01-to-06-11.md
@@ -12,6 +12,10 @@
 
 ## Sprint completion notes
 
+- JP out: 1/2 day on June2
+- George pulled to another project: June 2
+- Manavalan on another project start of sprint
+
 ---
 
 ## UX Assignments
@@ -46,7 +50,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
 - Harish
 
   - work on Connectors with JP
-  - take over the Arunodhayam template
+  - take over the Arunodhayam template - decided to use Architecture template instead
   - HOP: continue learning Angular
 
 - Surrender
