--- a/docs/planning/2021/sprints/sprint 11/06-01-to-06-11.md
+++ b/docs/planning/2021/sprints/sprint 11/06-01-to-06-11.md
@@ -15,6 +15,7 @@
 - JP out: 1/2 day on June2
 - George pulled to another project: June 2
 - Manavalan on another project start of sprint
+- Surrender taken by Supriya starting on Friday June 4th
 
 ---
 
