closing out sprint11 starting sprint 12

--- a/docs/planning/2021/sprints/sprint 12/06-15-to-06-25.md
+++ b/docs/planning/2021/sprints/sprint 12/06-15-to-06-25.md
@@ -2,16 +2,47 @@
 
 ## Goal/notes for Sprint
 
+1. start BETA-12
+2. complete connector framework/code generation
+
+---
+
+## Sprint completion notes
+
+- TBD
+
+---
+
 ## UX Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
+- Ajith
+  - using Geppetto screen designer create a professional Tkt app
+  - continue developing static pages and add more templates until we get to nine (9) total
+
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
+
+- JP
+
+  - priority bugs as they arise
+  - Connector framework
+    - design SystemsCredentialsManager to save credentials in vault
+
+- Harish
+
+  - HOP: continue learning Angular
+
+- Naveen
+  - start the SystemsCredentialsManager vault integration
 
 ---
 
 ## DevOps Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
+
+- Harish
+  - support geppetto deployments
