--- a/docs/planning/2021/sprints/sprint 13/06-29-to-07-09.md
+++ b/docs/planning/2021/sprints/sprint 13/06-29-to-07-09.md
@@ -21,8 +21,9 @@
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Ajith
-  - using Geppetto screen designer create a professional Tkt app
+  - finish new Geppetto generation template
   - continue developing static pages and add more templates until we get to nine (9) total
+  - test to see if the fix George made allows him to create a professional screen that saves the information correctly
 
 ## Developer Assignments
 
@@ -40,12 +41,12 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Naveenkumar
   - finish SystemCredentialsManager for connector use
-  - finish adding Bala We Connect template - lets see how good the doc is
+  - finish adding Bala We Connect template - lets see how good the doc that Harish created is
 
 - Surrender
   - continue to learn GrapesJS by adding pop up to HychartJS 
   - create internationalization in Angular 12
-  - first Geppetto task add new version of GrapesJS to Geppetto - this will allow him to become familiar with the Geppetto code
+  - first Geppetto task add new version of GrapesJS to Geppetto (in your own branch) - this will allow him to become familiar with the Geppetto code
   - HOP: finish Angular course
 
 ---
