create a project primary language fixed bug

--- a/application/clients/desktop/src/assets/locales/en/translation.json
+++ b/application/clients/desktop/src/assets/locales/en/translation.json
@@ -5,7 +5,7 @@
     "label":"Label",
     "app_context":"App Context",
     "description":"Description",
-    "primary_language":"Prmiary Language",
+    "primary_language":"Primary Language",
     "secondary_language":"Secondary Language",
     "cancel":"Cancel",
     "create":"Create",
