--- a/docs/planning/2021/sprints/sprint 13/06-29-to-07-09.md
+++ b/docs/planning/2021/sprints/sprint 13/06-29-to-07-09.md
@@ -12,7 +12,7 @@
 
 ## Sprint completion notes
 
-- added at the end of the sprint
+- added at the end of the sprint -as of July 7 so far so good
 
 ---
 
@@ -30,21 +30,24 @@ Please note to look for specifics tasks in Github this just gives the overall go
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - JP
+
   - priority bugs as they arise
   - Connector framework
     - complete the Connector framework with help of who ever is around
 
 - Harish
+
   - add IBM template
   - start SEF with Naveenkumar
   - HOP: finish Angular course, start learning GrapesJS
 
 - Naveenkumar
+
   - finish SystemCredentialsManager for connector use
   - finish adding Bala We Connect template - lets see how good the doc that Harish created is
 
 - Surrender
-  - continue to learn GrapesJS by adding pop up to HychartJS 
+  - continue to learn GrapesJS by adding pop up to HychartJS
   - create internationalization in Angular 12
   - first Geppetto task add new version of GrapesJS to Geppetto (in your own branch) - this will allow him to become familiar with the Geppetto code
   - HOP: finish Angular course
