end of sprint 13 start sprint 14

--- a/docs/planning/2021/sprints/sprint 13/06-29-to-07-09.md
+++ b/docs/planning/2021/sprints/sprint 13/06-29-to-07-09.md
@@ -12,7 +12,20 @@
 
 ## Sprint completion notes
 
-- added at the end of the sprint -as of July 7 so far so good
+- JP - finished the development of Connector Framework - but now we have to do a lot of testing
+- Harish completed
+  - added the IBM template
+  - completed the Angular course
+  - started the SEF
+  - started HOP with GrapesJS
+- Naveenkumar
+  - completed the SystemCredentialsManager (talking to vault)
+  - decided NOT to have him do the WeConnect template because of his lack of Angular skills
+  - started the back end portion of the SEF
+- Ajith
+  - completed Angular course
+  - completed internationalization in Angular 12
+  - finished learning about HyChartJS
 
 ---
 
