--- a/docs/planning/2021/sprints/sprint 14/07-13-to-07-23.md
+++ b/docs/planning/2021/sprints/sprint 14/07-13-to-07-23.md
@@ -1,17 +1,78 @@
 # Sprint plan Tuesday July 13 to July 23
 
+
 ## Goal/notes for Sprint
+
+1. start BETA-14
+2. extensive testing of Connector framework
+3. finish SEF base sample app and start SEF code generation
+4. Surrender start new version of Geppetto UI using Angular 12 and latest version of GrapesJS
+5. add Geppetto new template or WeConnect
+
+---
+
+## Sprint completion notes
+
+- JP - extensively test Connector framework with different APIs - need to test with at least five (5) different APIs
+- Harish completed
+  - added the IBM template
+  - completed the Angular course
+  - started the SEF
+  - started HOP with GrapesJS
+- Naveenkumar
+  - completed the SystemCredentialsManager (talking to vault)
+  - decided NOT to have him do the WeConnect template because of his lack of Angular skills
+  - started the back end portion of the SEF
+- Ajith
+  - completed Angular course
+  - completed internationalization in Angular 12
+  - finished learning about HyChartJS
+
+---
 
 ## UX Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
+- Ajith
+  - finish new Geppetto generation template
+  - continue developing static pages and add more templates until we get to nine (9) total
+  - test to see if the fix George made allows him to create a professional screen that saves the information correctly
+
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
+
+- JP
+
+  - priority bugs as they arise
+  - Connector framework
+    - extensively test Connector framework with different APIs - need to test with at least five (5) or more different APIs
+  - SEF allow user entity to be added to a feature
+
+- Harish
+
+  - start SEF front end generation
+  - with Surrender start the new version of Geppetto UI
+  - HOP: continue learning GrapesJS
+
+- Naveenkumar
+
+  - finish SEF demo app
+  - finish population of data via FakerJS
+    - create first cut of gepFaker
+  - start back end generation for SEF
+  - HOP: start Angular course
+
+- Surrender
+  - start new version of Gepppeto UI with Angular 12, latest version of GrapesJS, and using the new Ajith Geppetto template
+  - HOP: start node course
 
 ---
 
 ## DevOps Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
+
+- Harish
+  - support geppetto deployments
