added final sprint 14 plan start

--- a/docs/planning/2021/sprints/sprint 14/07-13-to-07-23.md
+++ b/docs/planning/2021/sprints/sprint 14/07-13-to-07-23.md
@@ -13,20 +13,7 @@
 
 ## Sprint completion notes
 
-- JP - extensively test Connector framework with different APIs - need to test with at least five (5) different APIs
-- Harish completed
-  - added the IBM template
-  - completed the Angular course
-  - started the SEF
-  - started HOP with GrapesJS
-- Naveenkumar
-  - completed the SystemCredentialsManager (talking to vault)
-  - decided NOT to have him do the WeConnect template because of his lack of Angular skills
-  - started the back end portion of the SEF
-- Ajith
-  - completed Angular course
-  - completed internationalization in Angular 12
-  - finished learning about HyChartJS
+added at the end of the sprint
 
 ---
 
@@ -65,7 +52,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - HOP: start Angular course
 
 - Surrender
-  - start new version of Gepppeto UI with Angular 12, latest version of GrapesJS, and using the new Ajith Geppetto template
+  - start new version of Geppetto UI with Angular 12, latest version of GrapesJS, and using the new Ajith Geppetto template
   - HOP: start node course
 
 ---
