Unwanted spaces and error removed

--- a/application/clients/desktopV2/src/assets/i18n/en.json
+++ b/application/clients/desktopV2/src/assets/i18n/en.json
@@ -3,6 +3,13 @@
         "HEADING":"Welcome to the Geppetto",
         "DESCRIPTION":"Geppetto allows you to create Application in fastest manner",
         "SIGNIN":"Sign In",
-        "ABOUT":"About"
+        "ABOUT":"About",
+        "LANGUAGE":{
+            "en": "English",
+            "ta": "தமிழ்",
+            "es": "Español"
+        }
     }
+  
+  
 }
