--- a/application/clients/desktopV2/src/assets/i18n/es.json
+++ b/application/clients/desktopV2/src/assets/i18n/es.json
@@ -3,6 +3,11 @@
         "HEADING":"Bienvenida a la geppetto",
         "DESCRIPTION":"Geppetto le permite crear aplicaciones de la manera más rápida",
         "SIGNIN":"Iniciar sesión",
-        "ABOUT":"Acerca de"
+        "ABOUT":"Acerca de",
+        "LANGUAGE":{
+            "en": "English",
+            "ta": "தமிழ்",
+            "es": "Español"
+        }
     }
 }
