--- a/application/clients/desktopV2/src/assets/i18n/ta.json
+++ b/application/clients/desktopV2/src/assets/i18n/ta.json
@@ -3,6 +3,11 @@
         "HEADING":"கெப்பெட்டோவுக்கு வருக",
         "DESCRIPTION":"பயன்பாட்டை விரைவாக உருவாக்க கெப்பெட்டோ உங்களை அனுமதிக்கிறது",
         "SIGNIN":"உள்நுழைக",
-        "ABOUT":"பற்றி"
+        "ABOUT":"பற்றி",
+        "LANGUAGE":{
+            "en": "English",
+            "ta": "தமிழ்",
+            "es": "Español"
+        }
     }
 }
