--- a/docs/planning/2021/sprints/sprint 14/07-13-to-07-23.md
+++ b/docs/planning/2021/sprints/sprint 14/07-13-to-07-23.md
@@ -15,6 +15,7 @@
 
 naveen out - July 16
 Priya out July 16
+Saranya - joined team on Friday July 16 - will focus on expanding her node knowledge
 
 ---
 
