forgot to add something

--- a/docs/planning/2021/sprints/sprint 14/07-13-to-07-23.md
+++ b/docs/planning/2021/sprints/sprint 14/07-13-to-07-23.md
@@ -15,7 +15,8 @@
 
 naveen out - July 16
 Priya out July 16
-Saranya - joined team on Friday July 16 - will focus on expanding her node knowledge
+Priya and Dhivya joined the team as freshers focusing on Node - they did not have 10d machine to practice on they were doing exercising on c3 schools
+Saranya - pretty much a fresher from Bambe - joined team on Friday July 16 - will focus on expanding her node knowledge
 
 ---
 
