completion of sprint-14 notes start plan for sprint 15

--- a/docs/planning/2021/sprints/sprint 15/07-27-to-08-06.md
+++ b/docs/planning/2021/sprints/sprint 15/07-27-to-08-06.md
@@ -1,18 +1,19 @@
-# Sprint plan Tuesday June 29 to July 07
+# Sprint plan Tuesday July 27 to August 06
 
 ## Goal/notes for Sprint
 
-1. start BETA-13
-2. continue/complete connector framework/code generation
-3. finish SystemCredentialsManager/Vault generation
-4. Surrender complete Angular course
-5. Harish complete Angular course, adds IBM template, start SEF with Naveen
+1. start BETA-15
+2. continue extensive testing of Connector framework
+3. start SEF code generation
+4. Surrender continue with new version of Geppetto UI using Angular 12 and latest version of GrapesJS
+5. add Geppetto new template or WeConnect
+6. add new landing page to Angular 12 version of Geppetto
 
 ---
 
 ## Sprint completion notes
 
-- added at the end of the sprint
+TBD at end of sprint
 
 ---
 
@@ -21,32 +22,57 @@
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Ajith
-  - using Geppetto screen designer create a professional Tkt app
+  - provide new landing page for new version of Geppetto
+  - finish new Geppetto generation template
   - continue developing static pages and add more templates until we get to nine (9) total
+  - test to see if the fix George made allows him to create a professional screen that saves the information correctly
 
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - JP
+
   - priority bugs as they arise
   - Connector framework
-    - complete the Connector framework with help of who ever is around
+    - extensively test Connector framework with different APIs - need to test with at least five (5) or more different APIs
+  - SEF as default feature
+    - allow user entity to be added to a feature
+    - add gpSearch flow
+    - add default screen
+  - Modifiers support for SEF
+    - allowing search criteria to be passed from screen designer
 
 - Harish
-  - add IBM template
-  - start SEF with Naveenkumar
-  - HOP: finish Angular course, start learning GrapesJS
+
+  - continue SEF front end generation
+  - with Surrender start KT for the new version of Geppetto UI
+  - HOP: continue learning GrapesJS
 
 - Naveenkumar
-  - finish SystemCredentialsManager for connector use
-  - finish adding Bala We Connect template - lets see how good the doc is
+
+  - finish SEF demo app - mostly finished last sprint just need to demo
+  - finish population of data via FakerJS - mostly finishes last sprint just need to demo
+  - demo first cut of gepFaker
+  - start back end generation for SEF following and adding to the work from Harish
+  - HOP: continue Angular course
 
 - Surrender
-  - continue to learn GrapesJS by adding pop up to HychartJS 
-  - create internationalization in Angular 12
-  - first Geppetto task add new version of GrapesJS to Geppetto - this will allow him to become familiar with the Geppetto code
-  - HOP: finish Angular course
+
+  - New version of Geppetto UI with Angular 12
+    - complete logger
+    - complete Google Analytics
+    - complete login page and log in
+    - complete adding new landing page
+    - KT for Harish on this new version
+  - HOP: continue node course
+
+- Saranya
+  - finish docker version of Handlebars dynamic
+  - add WeConnect template to Geppetto using Harish doc
+    - if you find that doc needs more explanation add and discuss changes/improvements with team
+  - HOP
+    - ask JP for the Geppetto developer document and work with JP and Dan on updating it
 
 ---
 
