--- a/application/clients/desktopV2/src/assets/i18n/ta.json
+++ b/application/clients/desktopV2/src/assets/i18n/ta.json
@@ -2,7 +2,7 @@
     "HOME": {
         "HEADING1": "தி கிளவுட் நேட்டிவ்",
         "HEADING2": "​​​​​​​குறைந்த குறியீடு தளம்",
-        "SIGNUP": "கையொப்பமிடுங்கள்",
+        "SIGNUP": "பதிவு",
         "LOGIN": "உள்நுழை",
         "SEARCH_FOR": "தேடு ..",
         "ABOUT": "பற்றி"
