--- a/application/clients/desktopV2/src/assets/i18n/ta.json
+++ b/application/clients/desktopV2/src/assets/i18n/ta.json
@@ -6,5 +6,22 @@
         "LOGIN": "உள்நுழை",
         "SEARCH_FOR": "தேடு ..",
         "ABOUT": "பற்றி"
+    },
+    "LOGIN": {
+        "HEADER": "கெப்பெட்டோவில் உள்நுழைக",
+        "DESCRIPTION": "மீண்டும் வருக! பதிவின் போது நீங்கள் உள்ளிட்ட உங்கள் தரவுடன் உள்நுழைக",
+        "INPUT1": "பயனர்பெயர்",
+        "INPUT2": "கடவுச்சொல்",
+        "BUTTON_TXT": "உள்நுழை",
+        "ACCOUNT": "கணக்கு இல்லையா?",
+        "SIGNUP": "பதிவு"
+    },
+    "ABOUT": {
+        "ABOUT": "பற்றி",
+        "CLOSE": "மூடு",
+        "VERSION": "பதிப்பு :",
+        "BUILD_VERSION": "பதிப்பை உருவாக்கவும் :",
+        "BUILD_DATE": "உருவாக்க தேதி :",
+        "LICENCE": "திறந்த மூல உரிமங்கள் :"
     }
 }
