lats sprint 15 notes start 16

--- a/docs/planning/2021/sprints/sprint 15/07-27-to-08-06.md
+++ b/docs/planning/2021/sprints/sprint 15/07-27-to-08-06.md
@@ -13,7 +13,77 @@
 
 ## Sprint completion notes
 
-TBD at end of sprint
+### General personnel updates
+
+*** notes Dan made a mistake and corrupted his running notes with a bad merge so now this is been done from memory and may not be accurate**
+
+- Naveen was out or impacted for work on the following:
+  - Friday August 6th planned leave
+  - Tuesday August 4th had a laptop charger problem
+  - Wednesday August 5th could not work for 1/2 the day because the charger arrived late
+  - Monday August 9th had issue with slow machine and had to start up an RDP machine
+
+  - Saranya was out or impacted for work on the following:
+    - Some time the first week of the sprint needed to get RDP machine (Dan can not remember exact date)
+  
+  - Surrender
+    - July 27th went to another project but came back the next day
+
+### Deliverables
+
+- Ajith
+  - ***he keeps getting pulled into other work with Supriya***
+  - provide new landing page for new version of Geppetto - ***completed***
+  - finish new Geppetto generation template - ***delayed***
+  - continue developing static pages and add more templates until we get to nine (9) total - ***permanently delayed*** until he completes the new version of Geppetto
+  - test to see if the fix George made allows him to create a professional screen that saves the information correctly - ***delayed*** until completion of new Geppetto and new Geppetto template
+
+
+  - JP
+
+  - priority bugs as they arise ***ongoing***
+  - JP spent a lot of time helping Naveen and Harish with the SEF ***this is expected as they are new to generation and Geppetto***
+  - Connector framework
+    - extensively test Connector framework with different APIs - need to test with at least five (5) or more different APIs
+    ***tested with snow -  found several issues covered under #1236 and were fixed - also found an old design issue with GetNounByID for more details see the drawio file found wit this document***
+  
+  - SEF as default feature
+    - allow user entity to be added to a feature ***completed -  but its added by default instead of allowing a user to mess with it***
+    - add gpSearch flow ***completed***
+    - add default screen ***completed***
+  - Modifiers support for SEF ***delayed*** 
+    - allowing search criteria to be passed from screen designer
+
+- Harish
+  - continue SEF front end generation ***made progress needed a help with understanding how to properly code this but this was his first time tackling  generation***
+  - with Surrender start KT for the new version of Geppetto UI ***delayed*** 
+  - HOP: continue learning GrapesJS ***steady progress -  almost completed***
+
+- Naveenkumar
+
+  - finish SEF demo app - ***completed***
+  - finish population of data via FakerJS - ***completed***
+  - demo first cut of gepFaker ***delayed - this was taking too long so decided to leave it for another time***
+  - start back end generation for SEF following and adding to the work from Harish ***some progress** 
+  - HOP: continue Angular course ***some progress**
+
+- Surrender
+
+  - New version of Geppetto UI with Angular 12
+    - complete logger ***completed**
+    - complete Google Analytics ***delayed** the logger took to long not entirely his fault as Dan asked him to investigate how winton could be used in Angular and the reality is that no one does this
+    - complete login page and log in  ***adding the HTML but did not actually login***
+    - complete adding new landing page ***completed the splash page which is the first page the user sees when they hit the url - dan mistakenly called this the landing page***
+    - KT for Harish on this new version ***delayed due to the SEF taking longer than expected***
+  - HOP: continue node course ***steady progress**
+
+
+- Saranya
+  - finish docker version of Handlebars dynamic ***completed***
+  - add WeConnect template to Geppetto using Harish doc ***progress made by since this is her first time in Geppetto it take time***
+    - if you find that doc needs more explanation add and discuss changes/improvements with team ***started to add changes based on her work adding the template***
+  - HOP
+    - ask JP for the Geppetto developer document and work with JP and Dan on updating it ***covered by previous comments***
 
 ---
 
