--- a/docs/planning/2021/sprints/sprint 16/08-10-to-08-20.md
+++ b/docs/planning/2021/sprints/sprint 16/08-10-to-08-20.md
@@ -2,17 +2,22 @@
 
 ## Goal/notes for Sprint
 
-1. start BETA-13
+1. start BETA-16
 2. continue/complete connector framework/code generation
-3. finish SystemCredentialsManager/Vault generation
-4. Surrender complete Angular course
-5. Harish complete Angular course, adds IBM template, start SEF with Naveen
 
 ---
 
 ## Sprint completion notes
 
-- added at the end of the sprint
+### General personnel updates
+
+- Harish was out or impacted for work on the following:
+  - Tuesday 8-10 - planned leave
+  - Wednesday 8-11 - planned leave
+
+### Deliverables
+
+
 
 ---
 
